[package]
name = "rss-server"
version = "0.1.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]

[dependencies]
log="0.3.8"
tokio-core="0.1.10"
tokio-pool = "0.1.0"
hyper = "0.11.6"
multipart-async = { git = 'https://github.com/abonander/multipart-async' } #"0.0.2"
futures = "0.1.16"
futures-await={ git = 'https://github.com/alexcrichton/futures-await' }
route = "0.2.0"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"

rss_request_parser = { path = "rss_request_parser"}
rss_routes = { path = "rss_routes"}

[workspace]