[package]
name = "rss-server"
version = "0.1.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]
#
[dependencies]
log="0.3.8"
serde = "1.0.16"
toml = "0.4.5"
serde_derive = "1.0.16"
futures = "0.1.14"
num_cpus = "1.0"
futures-spawn = "0.1.1"
futures-threadpool = "0.1"
tokio-core="0.1.10"
tokio-pool = "0.1.0"
hyper = "0.11.14"
http-box = "0.1.5"
[dev-dependencies]
#http = "0.1.4"
