[package]
name = "rss-routes"
version = "0.1.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]

[dependencies]
log="0.3.8"
tokio-core="0.1.10"
hyper = "0.11.6"
multipart-async = { git = 'https://github.com/abonander/multipart-async' }
futures = "0.1.16"
futures-await={ git = 'https://github.com/alexcrichton/futures-await' }
route = "0.2.0"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
hyper-staticfile = "0.1.1"

rss-engine = { path = "../rss-engine"}
